--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@microsoft/signalr": "^7.0.12",
     "bootstrap": "^5.2.3",
     "bootswatch": "^5.3.1",
     "font-awesome": "^4.7.0",
