--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data source=datingapp.db"
+    "DefaultConnection" : "Server=localhost; Port=5432; User Id=postgres; Password=postgrespw; Database=datingapp"
   },
-  "TokenKey": "this is my custom Secret key for authentication key for authentication"
+  "TokenKey": "this is my custom Secret key for authentication key for authentication",
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "demn5pyp3",
+    "ApiKey": "824444883148767",
+    "ApiSecret": "O0j8O1m5QKa3h9klYii3FcIEwJ8"
+  }
 }
